--- a/news.html
+++ b/news.html
@@ -46,122 +46,118 @@
         </div>
 
           <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
-    import { getFirestore, collection, addDoc, getDocs, query, orderBy, deleteDoc, doc } 
-    from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
+            import { getFirestore, collection, addDoc, getDocs, query, orderBy, deleteDoc, doc } 
+            from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
 
-    // Import the functions you need from the SDKs you need
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
+            // Import the functions you need from the SDKs you need
+            // TODO: Add SDKs for Firebase products that you want to use
+            // https://firebase.google.com/docs/web/setup#available-libraries
 
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-    apiKey: "AIzaSyAisg8efEgG-n63thSqWtvW2d2lqUEe7Dw",
-    authDomain: "neutrondivision.firebaseapp.com",
-    projectId: "neutrondivision",
-    storageBucket: "neutrondivision.firebasestorage.app",
-    messagingSenderId: "679702672783",
-    appId: "1:679702672783:web:714b0e3775d3e1083fc7fa"
-    };
+            // Your web app's Firebase configuration
+            const firebaseConfig = {
+            apiKey: "AIzaSyAisg8efEgG-n63thSqWtvW2d2lqUEe7Dw",
+            authDomain: "neutrondivision.firebaseapp.com",
+            projectId: "neutrondivision",
+            storageBucket: "neutrondivision.firebasestorage.app",
+            messagingSenderId: "679702672783",
+            appId: "1:679702672783:web:714b0e3775d3e1083fc7fa"
+            };
 
-    // Initialize Firebase
+            const app = initializeApp(firebaseConfig);
+            const db = getFirestore(app); // ← 이게 빠져서 글이 안 올라감
 
-    // init
-    // XSS 방지용 escape
-    function escapeHtml(str) {
-      return String(str || '').replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
-    }
-
-    // 글 불러오기 + 삭제 버튼 이벤트
-    async function loadPosts() {
-      try {
-        const q = query(collection(db, "posts"), orderBy("time", "desc"));
-        const snap = await getDocs(q);
-        const postsDiv = document.getElementById("posts");
-        postsDiv.innerHTML = "";
-
-        snap.forEach(docSnap => {
-          const p = docSnap.data();
-          const id = docSnap.id;
-
-          const postEl = document.createElement('div');
-          postEl.className = 'post';
-
-          const titleEl = document.createElement('h3');
-          titleEl.innerText = p.title || '(제목 없음)';
-          postEl.appendChild(titleEl);
-
-          const contentEl = document.createElement('p');
-          contentEl.innerHTML = (escapeHtml(p.content) || '').replace(/\n/g, '<br>');
-          postEl.appendChild(contentEl);
-
-          const timeEl = document.createElement('small');
-          timeEl.innerText = p.time || '';
-          postEl.appendChild(timeEl);
-
-          // 삭제 버튼 + 비밀번호 확인
-          const delBtn = document.createElement('button');
-          delBtn.innerText = '삭제';
-          delBtn.className = 'deleteBtn';
-          delBtn.addEventListener('click', async () => {
-            const inputPwd = prompt("삭제하려면 비밀번호를 입력하세요:");
-            if (!inputPwd) return;
-
-            try {
-              const docRef = doc(db, "posts", id);
-              const docSnap2 = await getDoc(docRef);
-              if (!docSnap2.exists()) return alert("글이 존재하지 않습니다.");
-              const storedPwd = docSnap2.data().password;
-              if (inputPwd !== storedPwd) return alert("비밀번호가 틀립니다!");
-
-              await deleteDoc(docRef);
-              alert("삭제 완료!");
-              loadPosts();
-            } catch(e) {
-              console.error(e);
-              alert("삭제 실패: " + (e.message || e));
+            // XSS 방지용 escape
+            function escapeHtml(str) {
+                return String(str || '').replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
             }
-          });
 
-          postEl.appendChild(delBtn);
-          postsDiv.appendChild(postEl);
-        });
-      } catch (e) {
-        console.error('loadPosts error', e);
-      }
-    }
+            // 글 불러오기 + 삭제 버튼
+            async function loadPosts() {
+                try {
+                    const q = query(collection(db, "posts"), orderBy("time", "desc"));
+                    const snap = await getDocs(q);
+                    const postsDiv = document.getElementById("posts");
+                    postsDiv.innerHTML = "";
 
-    // 글 작성
-    document.getElementById("postBtn").onclick = async () => {
-    const title = document.getElementById("title").value.trim();
-    const content = document.getElementById("content").value.trim();
-    const password = document.getElementById("password").value.trim();
+                    snap.forEach(docSnap => {
+                        const p = docSnap.data();
+                        const id = docSnap.id;
 
-    if (!title || !content || !password) {
-        return alert("제목, 내용, 비밀번호를 모두 입력해주세요!");
-    }
+                        const postEl = document.createElement('div');
+                        postEl.className = 'post';
 
-    try {
-        await addDoc(collection(db, "posts"), {
-        title,
-        content,
-        password,
-        time: new Date().toLocaleString()
-        });
-        // 입력 초기화
-        document.getElementById("title").value = "";
-        document.getElementById("content").value = "";
-        document.getElementById("password").value = "";
-        loadPosts();
-    } catch (e) {
-        console.error("글 저장 실패", e);
-        alert("글 저장 실패: " + (e.message || e));
-    }
-    };
+                        const titleEl = document.createElement('h3');
+                        titleEl.innerText = p.title || '(아이디 없음)';
+                        postEl.appendChild(titleEl);
 
-    loadPosts();
-//danke chat gpt
-  </script>
+                        const contentEl = document.createElement('p');
+                        contentEl.innerHTML = (escapeHtml(p.content) || '').replace(/\n/g, '<br>');
+                        postEl.appendChild(contentEl);
+
+                        const timeEl = document.createElement('small');
+                        timeEl.innerText = p.time || '';
+                        postEl.appendChild(timeEl);
+
+                        // 삭제 버튼 + 비밀번호 확인
+                        const delBtn = document.createElement('button');
+                        delBtn.innerText = '삭제';
+                        delBtn.className = 'deleteBtn';
+                        delBtn.addEventListener('click', async () => {
+                            const inputPwd = prompt("삭제하려면 비밀번호를 입력하세요:");
+                            if (!inputPwd) return;
+
+                            try {
+                                const docRef = doc(db, "posts", id);
+                                const docSnap2 = await getDoc(docRef);
+                                if (!docSnap2.exists()) return alert("글이 존재하지 않습니다.");
+                                const storedPwd = docSnap2.data().password;
+                                if (inputPwd !== storedPwd) return alert("비밀번호가 틀립니다!");
+
+                                await deleteDoc(docRef);
+                                alert("삭제 완료!");
+                                loadPosts(); // 삭제 후 새로고침
+                            } catch(e) {
+                                console.error(e);
+                                alert("삭제 실패: " + (e.message || e));
+                            }
+                        });
+                        postEl.appendChild(delBtn);
+                        postsDiv.appendChild(postEl);
+                    });
+                } catch (e) {
+                    console.error('loadPosts error', e);
+                }
+            }
+
+            // 글 작성
+            document.getElementById("postBtn").onclick = async () => {
+                const title = document.getElementById("title").value.trim();
+                const content = document.getElementById("content").value.trim();
+                const password = document.getElementById("password").value.trim();
+
+                if (!title || !content || !password) return alert("아이디, 내용, 비밀번호를 모두 입력해주세요!");
+
+                try {
+                    await addDoc(collection(db, "posts"), {
+                        title,
+                        content,
+                        password,
+                        time: new Date().toLocaleString()
+                    });
+                    document.getElementById("title").value = "";
+                    document.getElementById("content").value = "";
+                    document.getElementById("password").value = "";
+                    loadPosts(); // 글 작성 후 새로고침
+                } catch (e) {
+                    console.error("글 저장 실패", e);
+                    alert("글 저장 실패: " + (e.message || e));
+                }
+            };
+
+            loadPosts();
+            //danke chat gpt
+    </script>
         
     </body>
 </html>
